Updating some css

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 body {
   margin: 0;
-  background-color: #f9fafb;
+  background-color: #a3bcd4;
   font-family: OpenSans, sans-serif;
   display: flex;
   align-items: center;
